--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,26 @@
 #root {
   margin: 0 auto;
   padding: 1rem;
-  width: 80%
+  width: 100%;
+  height: 100%;
+  padding-top: 50px;
+}
+
+.drop-down {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: black;
+  z-index: 100;
+  color: white;
+  font-size: 2rem;
+  text-align: center;
 }
 
 .submission {
-  margin: auto;
+  margin: 20px auto;
   width: 50%;
   text-align: center;
 }
